<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChronoSnap</string>

    <!-- Notification displayed during capture -->
    <string name="notification_title">ChronoSnap Capture</string>
    <string name="notification_text">Capture is in progress.</string>

    <!-- Toast messages displayed to the user -->
    <string name="toast_error_storage_dir">Error: unable to create storage directory.</string>
    <string name="toast_error_storage_img">Error: unable to store captured image.</string>
    <string name="toast_error_camera">Error: unable to capture an image.</string>

    <string name="title_activity_settings">Settings</string>

    <string name="text_loading">Loading...</string>
    <string name="text_na">n/a</string>

    <!-- Start / stop capture button -->
    <string name="button_start">Start Capture</string>
    <string name="button_stop">Stop Capture</string>

    <!-- Instructions displayed in the main activity -->
    <string name="text_instructions1">
        After adjusting capture settings, use the button below to start and stop the image capture.
    </string>
    <string name="text_instructions2">
        Once started, ChronoSnap will continue to take pictures at the specified interval until it
        is either explicitly stopped or the predefined image limit is reached.
    </string>

    <!-- Capture Statistics -->
    <string name="text_statistics">Statistics</string>

    <string name="text_start_time">Start Time:</string>
    <string name="text_images_captured">Images Captured:</string>
    <string name="text_images_remaining">Images Remaining:</string>

    <!-- Preferences

    NOTE: to avoid typos and to ensure that default values only exist in a
    single location, the keys, titles, and defaults are all managed as
    strings.

    TODO: exclude some of these from translation -->

    <!-- Categories -->
    <string name="pref_category_timing">Timing</string>
    <string name="pref_category_camera">Camera</string>

    <!-- Interval -->
    <string name="pref_interval_key">interval</string>
    <string name="pref_interval_title">Interval</string>
    <string name="pref_interval_default">5000</string>
    <string-array name="pref_interval_entries">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string-array name="pref_interval_entry_values">
        <item>5000</item>
        <item>10000</item>
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>

    <!-- Limit -->
    <string name="pref_limit_key">limit</string>
    <string name="pref_limit_title">Limit</string>
    <string name="pref_limit_default">0</string>
    <string-array name="pref_limit_entries">
        <item>None</item>
        <item>10 images</item>
        <item>20 images</item>
        <item>50 images</item>
        <item>100 images</item>
    </string-array>
    <string-array name="pref_limit_entry_values">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <!-- Camera -->
    <string name="pref_camera_key">camera</string>
    <string name="pref_camera_title">Camera</string>
    <string name="pref_camera_default">0</string>
    <string name="pref_camera_back">Back</string>
    <string name="pref_camera_front">Front</string>

    <!-- Focus -->
    <string name="pref_focus_key">focus</string>
    <string name="pref_focus_title">Focus</string>
    <string name="pref_focus_default">auto</string>
    <string-array name="pref_focus_entries">
        <item>None</item>
        <item>Auto</item>
    </string-array>
    <string-array name="pref_focus_entry_values">
        <item>none</item>
        <item>auto</item>
    </string-array>

</resources>
