<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/textInstructions1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_instructions1" />

        <Button
            android:id="@+id/buttonStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInstructions1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:padding="24dp"
            android:text="@string/text_loading" />

        <TextView
            android:id="@+id/textInstructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonStartStop"
            android:layout_marginTop="16dp"
            android:text="@string/text_instructions2" />

        <TextView
            android:id="@+id/textStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInstructions2"
            android:layout_marginTop="16dp"
            android:text="@string/text_statistics"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/textStatistics"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textStartTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/text_start_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/text_loading" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textImagesCapturedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/text_images_captured"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textImagesCaptured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/text_loading" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textImagesRemainingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/text_images_remaining"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textImagesRemaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/text_loading" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>